<resources xmlns:https="http://schemas.android.com/tools">
    <string name="app_name">Plannit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_enter_schedule">EnterSchedule</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_save_screen">SaveScreen</string>
    <string name="title_activity_group">group</string>
    <string name="title_activity_share_screen">ShareScreen</string>
    <string name="title_activity_read_screen">ReadScreen</string>
    <string name="title_activity_display_screen">DisplayScreen</string>
    <string name="title_activity_planner_output">PlannerOutput</string>
    <string name="group_info">Selected the friends to include and press +</string>
    <string name="enter_name">Enter your name:</string>
    <string name="contact">contact name</string>
    <string name="qr_des">Scan this to access this contact</string>
    <string name="info">By MDEC</string>
    <string name="input">Input Planner</string>
    <string name="group">Create Group</string>
    <string name="share">Share your planner</string>
    <string name="read">Read a QR code</string>
    <string name="help">Help</string>
    <string name="about">About us</string>
    <string name="infoText">\n\nMDEC is a student run club at the University of Guelph with no affliliation to the university itself. We make apps for students everywhere, and only publish free apps that never have ads\n</string>
    <string name="contactText">\nWant to join? like us on facebook: <a href="https://www.facebook.com/GuelphMDEC/?fref=ts">https://www.facebook.com/GuelphMDEC/?fref=ts</a>\n\nTry our other app: <a href="https://play.google.com/store/apps/details?id=com.mdec.gryphone">https://play.google.com/store/apps/details?id=com.mdec.gryphone</a></string>
    <string name="credsText">\n\nHead Developer: Christopher Jamieson\nProgrammers: Bradley Leonard, Christopher Jamieson\nConcept: Geoffrey Singer\nDesigned by all of us here at MDEC</string>
    <string name="colorLabel">Pick a color:</string>
    <string name="nocontacts">No contacts... yet</string>

</resources>
