<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_input"
            android:icon="@drawable/ic_add_person"
            android:title="@string/input" />
        <item
            android:id="@+id/nav_createGroup"
            android:icon="@drawable/ic_group"
            android:title="@string/group" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_read"
            android:title="@string/read" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>
